--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 	<title>ROC Curve</title>
 	<script type="text/javascript" src="d3/d3.v3.js"></script>
 	<link type="text/css" rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="github.css">
+	<script src="highlight.pack.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
 	<!-- <link type="text/css" rel="stylesheet" href="02.css"> -->
 
 	<script type="text/javascript" src="data.js"></script>
-	
-
-	
-
 </head>
 <body>
 	<h1>Understanding Receiver Operating Characteristic (ROC) Curves</h1>
+	<p> ROC Curves are thrown around a lot, and the overall thing to look for is that you want the curve to resemble a square and not a triangle.</p>
 	<div id="roc">		
 	</div>
 	<div id="chart">	
@@ -24,6 +24,32 @@
 		<th>Score</th>
 	</tr>
 	</table>	
+	</div>
+	<div id="code">
+		<h3>Algorithm:</h3>
+		<pre>
+			<code class="python">
+FP = TP = 0
+R = []
+fprev = -10
+i = 1
+
+while (i < len(data)):
+  if (data[i].score != fprev):
+	R.append([TP/N, FP/N])
+	fprev = data[i].score
+
+  if (data[i].score):
+	TP += 1
+  else:
+	FP += 1
+
+R.append([TP/N, FP/N])
+			</code>
+		</pre>
+	</div>
+	<div id="ref">
+		<p>http://home.comcast.net/~tom.fawcett/public_html/papers/ROC101.pdf</p>
 	</div>
 	<!-- // <script type="text/javascript" src="03.js"></script> -->
 	<script type="text/javascript" src="roc.js"></script>
